--- a/_data/data.yml
+++ b/_data/data.yml
@@ -92,28 +92,28 @@ experiences:
           architecto beatae vitae dicta sunt explicabo.
             - Bullet point
             - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
+      - role: Software Engineer
+        time: 2021 - 2022
+        company: Code One, Porto http://www.codeone.pt/newsite/
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
+          Whereas Accenture allowed me to enter the professional field, I realised that my personal passion lays on the new 
+          software / solutions development. 
+          My currents tasks by Code One, are:
+            • Full-Stack developer: programming and working in front-end and back-end development for projects related to 
+            B2B and B2C commerce using the languages Python and C# and databases as PynamoDB and SQL.
+      - role: Analyst Application Developer
+        time: 2019 - 2021
+        company: Accenture, Braga https://www.accenture.com/
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Accenture was my first contact with the professional field, where I had the opportunity as a backend developer, to give 
+          support to 3 important projects with customers in USA, Italy and Brazil. 
+          Among others tasks I had the opportunity to: 
+            • Create scripts which could give Accenture an overview about the status of the different servers we had to 
+              support, allowing Accenture to improve the quality of its support. 
+            • Write new features in C# such as a unique way to sort strings and also fix bugs. 
+            • Create deploy guides.
+            • Database corrections.
+            • Detect bugs, correcting and add features to existing programs, helping to expand the business.
 projects:
     title: Projects
     intro: >
@@ -129,25 +129,6 @@ projects:
         link: "#"
         tagline: "A responsive website template designed to help web developers/designers market their services."
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-oss:
-    title: OSS Contributions
-    intro: >
-      You can list your open source software contributions in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    contributions:
       - title: Tempo
         link: "#"
         tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
