--- a/_data/data.yml
+++ b/_data/data.yml
@@ -62,12 +62,12 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Hardworking software development professional driven to increase team effectiveness. Focused on usability 
+      and performance improvements. Experienced in communicating with clients and attending to their requests.
+      So far, according to past performance reviews, some of my advantages are: availability, performance, 
+      flexibility (multiple technologies), debugging/analysis and being effective when communicating.
+      And one disadvantage is visibility, I have some trouble exposing my work, so outside of my teammates/managers, 
+      it might seem I'm not performing as well as I actually am.
 education:
     title: Education
     info:
@@ -82,17 +82,11 @@ experiences:
         company: IntellectEU 
         link: https://www.intellecteu.com/
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
+          With IntellectEU I adventured deeper into functional programming, which I was interested since university. 
+          Here I am working with Daml which works with contracts, as well as python for integrations.
+          Currently my tasks are:
+            - As a Backend developer, add new features and correct bugs, both in daml side and integrations side. 
+              This means I am working with both parts of the application from the backend and also handle communication between them.
       - role: Software Engineer
         time: 2021 - 2022
         company: Code One, Porto 
@@ -120,29 +114,7 @@ experiences:
 projects:
     title: Projects
     intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+      Currently adventuring into mobile apps on my free time. At the moment building a restful api for one app.
 
 skills:
     title: Skills &amp; Proficiency
