--- a/_data/data.yml
+++ b/_data/data.yml
@@ -64,9 +64,11 @@ career-profile:
     summary: |
       Hardworking software development professional driven to increase team effectiveness. Focused on usability 
       and performance improvements. Experienced in communicating with clients and attending to their requests.
-      \n So far, according to past performance reviews, some of my advantages are: availability, performance, 
+      
+      So far, according to past performance reviews, some of my advantages are: availability, performance, 
       flexibility (multiple technologies), debugging/analysis and being effective when communicating.
-      \n And one disadvantage is visibility, I have some trouble exposing my work, so outside of my teammates/managers, 
+      
+      And one disadvantage is visibility, I have some trouble exposing my work, so outside of my teammates/managers, 
       it might seem I'm not performing as well as I actually am.
 education:
     title: Education
