--- a/_data/data.yml
+++ b/_data/data.yml
@@ -27,7 +27,7 @@ sidebar:
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: decubal-github-io-print.pdf
+    pdf: nuno-d-marques-github-io-print.pdf
 
     languages:
       title: Languages
